--- a/sites/all/themes/newhopeks/less/template.less
+++ b/sites/all/themes/newhopeks/less/template.less
@@ -349,9 +349,14 @@
 			clear: left;
 		}
 
+		.field-name-field-image {
+			max-width: 33% !important;
+			margin: 0 0 10px 10px;
+		}
+
 		.article-listing__item__title {
 			margin-bottom: 0;
-			.font-size(18);
+			.font-size(16);
 			line-height: 1;
 		}
 
